--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=GestionnaireConge
 
-spring.datasource.url =
-spring.datasource.username=
-spring.datasource.password=
-server.port=
-spring.datasource.driver-class-name=
-spring.jpa.hibernate.ddl-auto=
+spring.datasource.url = jdbc:postgresql://localhost:5432/luc
+spring.datasource.username= luc
+spring.datasource.password= 12345
+server.port= 3001
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+logging.file.name=logs/application.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
